<?xml version="1.0" encoding="utf-8" ?>
<resources>
        
    <string name="app_name"> FireCast </string>
        
    <string name="hello_world"> Hello world! </string>
        
    <string name="login_title"> LOGIN </string>
        
    <string name="action_settings"> Settings </string>
        
    <string name="title_activity_main"> MainActivity </string>
        
    <string name="title_activity_login"> LoginActivity </string>
        
    <string name="login_hint">User</string>
        
    <string name="password_hint">Password</string>
        
    <string name="unauthorized_login">Login or password invalid</string>
        
    <string name="no_server_login"> Could not connect to the server </string>
        
    <string name="network"> Network </string>
        
    <string name="server_url"> URL server </string>
        
    <string name="settings"> Settings </string>
        
    <string name="login_required"> Login required </string>
        
    <string name="password_required"> Password required </string>
        
    <string name="network_required"> Network must be active </string>
        
    <string name="copcast_main_title"> FireCast </string>
        
    <string name="videos_label"> Recorded videos: </string>
        
    <string name="current_state"> Current state: </string>
        
    <string name="logged"> Connected </string>
        
    <string name="start_streaming">To initiate Transmission</string>
        
    <string name="start_mission"> To initiate Mission </string>
        
    <string name="recording_started"> Registering… </string>
        
    <string name="start_uploading">To initiate the Sending</string>
        
    <string name="uploading_videos">Sending Videos</string>
        
    <string name="notification_record_title"> FireCast Camera </string>
        
    <string name="notification_record_description"> Recording in the SDCard </string>
        
    <string name="notification_location_title"> Searching Location</string>
        
    <string name="notification_location_description">Search for current location</string>
        
    <string name="please_hold"> Please wait… </string>
        
    <string name="login_in"> Connecting… </string>
        
    <string name="server_error"> Unable to contact server </string>
        
    <string name="connection_error"> Error connecting, please check the same. </string>
        
    <string name="bad_request_error"> Connection error. Please contact your administrator. </string>
        
    <string name="welcome"> Welcome. </string>
        
    <string name="welcome_desc"> Touch below to initiate the writing and registers of localization. </string>
        
    <string name="pause_recording">To pause Writing</string>
        
    <string name="end_mission">To finish Mission</string>
        
    <string name="upload_data">To send Data</string>
        
    <string name="upload_data_size">To send data (%1$sMB) </string>
        
    <string name="upload"> To send </string>

    <string name="atualizando_ebombeiro"> Updating E-Fire </string>

    <string name="logout"> Logout </string>
        
    <string name="mission_start"> Initiated mission. </string>
        
    <string name="mission_start_desc"> The writing and capture of localization are active. </string>

    <string name="live_stream">Transmitting to the Living creature</string>
        
    <string name="live_stream_desc">Transmitting for the central office</string>
    <string name="uploading">Sending</string>
    <string name="uploading_size">Sending (%1$sMB of %2$sMB)</string>
        
    <string name="notification_upload_title">Sending data.</string>
        
    <string name="notification_upload_description">Sending data to the server ... </string>
        
    <string name="upload_disabled">It is not possible to send at this moment. The telephone is loading?</string>
        
    <string name="upload_stopped">Cancelled sending had the net restrictions/battery</string>
        
    <string name="under_construction"> In Construction </string>

    <string name="min_remaining"> Remaining time: </string>

      
    <string name="upload_completed"> Concluded sending! </string>
        
    <string name="stop_uploading"> You are sending given. It desires to interrupt and to start the mission? </string>
        
    <string name="ok"> OK </string>
    <string name="title_activity_mapa_ocorrencia_">Occurrence Map</string>
    <string name="title_activity_mapa_ocorrencia_activiy">Occurrence Map</string>
    <string name="cancel">Cancel </string>
    <string name="telefone_editado">Phone number edited.</string>
    <string name="msg_tel_nao_encontrado">There is no official registered in the range of Area Commander.</string>
    <string name="msg_sem_ocorrencia">No event for this car right now ...</string>
    <string name="texto_maca_retida">THE RETRACTABLE STRETCHER OF THIS CAR WAS RETAINED IN THIS HOSPITAL? (if you have not litter, or not in a hospital click NOT.)</string>
    <string name="nao">NOT</string>
    <string name="sim">YES</string>
    <string name="texto_recusa_vitima">\n HOSPITAL CARE THAT REFUSED TO VICTIM? \n (if you do not have a victim in this car or not be in a hospital, click on NO.)</string>
    <string name="parar_alarme">STOP ALARM:</string>
    <string name="conexao_perdida">LOST CONNECTION.</string>
    <string name="retomar_conexao">RESUME CONNECTION</string>
    <string name="texto_vtr_nao_cadastrada">It found no vehicle for your user. Check your registration on the e-193.</string>
    <string name="gps_desativado">GPS disabled!</string>
    <string name="gps_desativado_text">Click OK to activate it.</string>
    <string name="problema">Connection error! Use the Radio ...</string>
    <string name="ocorrencia">Occurrence:</string>
    <string name="j10">J10</string>
    <string name="j9_i">J09 I</string>
    <string name="cli">J10 I</string>
    <string name="sli">J11</string>
    <string name="j12">J12</string>
    <string name="detalhes_ocorrencia">Occurrence details</string>
    <string name="mapa_ocorrencia">Map occurrence</string>
    <string name="hint_fone">Former: 4891463290</string>
    <string name="fone">4891463290</string>
    <string name="msg_selecione_vtr">Select a car:</string>
    <string name="monitorar">Monitor</string>
    <string name="vtr_monitorada">The selected vehicle is being monitored.</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="text_wpp">Check out the phone to receive notifications (via WhatsApp) this vehicle is correct:</string>
    <string name="descarregar_videos">Upload videos</string>
    <string name="next">Next</string>
    <string name="msg_servidor">Choose the server from the list below:</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to the Server</string>
    <string name="ajuda">Help?</string>
    <string name="title_help">Do you need help?</string>
    <string name="help_text">Call the duty of DiTI +55 48 32711171 or open CBMSC site(www.cbm.sc.gov.br).</string>
    <string name="notification_stream_title">Streaming</string>
    <string name="notification_stream_description">Srteaming</string>
    <string name="btn_j9">J9</string>
    <string name="j9">J9</string>


</resources>