<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/bg_dark_block"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ocorrencia"
        android:id="@+id/tv_desc_endereco_ocorrencia"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:layout_marginRight="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_endereco_ocorrencia"
        android:textSize="25sp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:enabled="true"
        android:editable="true"
        android:text="@string/msg_sem_ocorrencia" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/j10"
        android:id="@+id/btn_j10"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_alignStart="@+id/tv_endereco_ocorrencia"
        android:layout_marginTop="140dp"
        android:enabled="false" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/j9_i"
        android:id="@+id/btn_j11"
        android:layout_alignTop="@+id/btn_j10"
        android:layout_toRightOf="@+id/btn_j10"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:enabled="false"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/cli"
        android:id="@+id/btn_j10_i"
        android:layout_alignTop="@+id/btn_j10"
        android:layout_toRightOf="@+id/btn_j11"
        android:textSize="40sp"
        android:layout_marginRight="10dp"
        android:enabled="false"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/sli"
        android:id="@+id/btn_j11_i"
        android:textSize="40sp"
        android:enabled="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/btn_j11"
        android:layout_toStartOf="@+id/btn_j11" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/j12"
        android:id="@+id/btn_j12"
        android:textSize="40sp"
        android:layout_alignTop="@+id/btn_j11_i"
        android:layout_toRightOf="@+id/btn_j11_i"
        android:layout_toEndOf="@+id/btn_j11_i"
        android:layout_marginLeft="10dp"
        android:enabled="false"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/detalhes_ocorrencia"
        android:id="@+id/btn_detalhes_ocorrencia"
        android:textSize="30sp"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_mapa_ocorrencia"
        android:layout_alignStart="@+id/btn_mapa_ocorrencia"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/mapa_ocorrencia"
        android:id="@+id/btn_mapa_ocorrencia"
        android:textSize="30sp"
        android:enabled="false"
        android:layout_above="@+id/btn_detalhes_ocorrencia"
        android:layout_alignLeft="@+id/btn_j11_i"
        android:layout_alignStart="@+id/btn_j11_i"
        android:layout_marginBottom="20dp" />
    <ImageView
        android:contentDescription="@string/recording_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recBall"
        android:src="@drawable/rec_ball"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/btn_stop"
        android:layout_alignTop="@+id/tv_desc_endereco_ocorrencia"
        android:layout_toRightOf="@+id/btn_stop" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_detalhesOcorrencia"
        android:choiceMode="singleChoice"
        android:visibility="visible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btn_play"
        android:background="@drawable/play"
        android:enabled="false"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/tv_desc_endereco_ocorrencia"
        android:layout_alignLeft="@+id/btn_j10_i"
        android:layout_alignStart="@+id/btn_j10_i" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_stop"
        android:background="@drawable/stop"
        android:enabled="false"
        android:visibility="invisible"
        android:layout_alignTop="@+id/btn_play"
        android:layout_toRightOf="@+id/btn_play"
        android:layout_toEndOf="@+id/btn_play" />

</RelativeLayout>