<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AuthenticationActivity"
    style="@style/AppTheme"
    android:background="@color/bg_dark_block">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_title"
        android:id="@+id/loggedUserLabel"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textColor="@color/text_dark"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/loggedUserLabel"
        android:background="#484849"
        android:id="@+id/horizontalRule"></RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLoginUser"
        android:hint="@string/login_hint"
        android:layout_below="@+id/horizontalRule"

        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textIsSelectable="true"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLoginPassword"
        android:hint="@string/password_hint"
        android:layout_below="@+id/txtLoginUser"

        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btn_login_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_default"
        android:minHeight="@dimen/button_height"
        android:minWidth="@dimen/button_width"
        android:text="@android:string/ok"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/txtLoginPassword"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:onClick="makeLoginRequest"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajuda"
        android:id="@+id/btn_ajuda"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/bg_dark_block" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/icon_face"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_face"
        android:clickable="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/icon_twitter"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/icon_face"
        android:layout_toStartOf="@+id/icon_face"
        android:src="@drawable/icon_twitter"
        android:layout_marginRight="10dp"
        android:clickable="true" />

</RelativeLayout>
